# masterful-homes

./: README.md
backend/: .env  .env.production  .gitignore  Procfile  alembic.ini  config.py  extensions.py  legacy_models.py  main.py  models.py  pyproject.toml  requirements.txt  seed.py
backend/core/: models.py
backend/instance/: db.sqlite3
backend/migrations/versions/: 0db4dc3267d9_initial_migration.py  0f7e077dd948_add_scheduled_date_and_end_date_to_.py  5c32de801c50_initial_migration.py  6e9602ca28c4_initial_migration.py  75b20259f208_added_price_field.py  b6b08f68e366_add_notifications_table.py  fae868974514_initial_migration.py
backend/modules/auth/: routes.py
backend/modules/config/: routes.py
backend/modules/dashboard/: routes.py  service.py
backend/modules/hr/: __init__.py  routes.py  service.py
backend/modules/notifications/: __init__.py  routes.py  service.py
backend/modules/tasks/: routes.py
backend/modules/time/: __init__.py  routes.py  service.py
backend/routes/: admin_routes.py  auth_routes.py  customer_routes.py  finance_routes.py  invoice_routes.py  manager_routes.py  notification_routes.py  search_routes.py
backend/tests/: conftest.py  test_migrations.py  test_models.py  test_seed.py  test_service.py
backend/utils/: auth_middleware.py  decorators.py  jwt_utils.py  notifications.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx  index.css  main.jsx
frontend/src/api/: api.jsx
frontend/src/apis/: api.jsx
frontend/src/components/: BreakdownTable.jsx  Customer360Modal.jsx  Footer.jsx  (+16 more)
(+74 files in other folders)
